# FLEET-UTILLIZATION-FORECASTING

./: .gitignore  01_setup_environment.ipynb  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: fleet_utilization_sample.csv
src/fleet_forecasting/: __init__.py  cli.py  data.py  evaluation.py  pipeline.py
src/fleet_forecasting/models/: arima_model.py  base.py  prophet_model.py
tests/: test_pipeline.py  test_streamlit_app.py  test_timezone.py
