[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-forecasting"
version = "0.1.0"
description = "Fleet utilization forecasting MVP"
authors = [{name = "Fleet AI"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
